# qml-tesla-infotainment

./: .gitignore  CMakeLists.txt  Main.qml  assets.qrc  main.cpp
.github/workflows/: build.yml
Controllers/: audiocontroller.cpp  audiocontroller.h  hvachandler.cpp  hvachandler.h  system.cpp  system.h
ui/BottomBar/: BottomBar.qml  HVACComponent.qml  VolumeComponent.qml
ui/LeftScreen/: LeftScreen.qml
ui/RightScreen/: BottomSheet.qml  MusicPlayer.qml  NavigationSearchBox.qml  RightScreen.qml
